[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Transition/TransitionIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Transition/TransitionOut.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Cutscenes/Love4Retro/Love4Retro.gd" type="Script" id=3]
[ext_resource path="res://resources/sprites/logos/logo-ma.png" type="Texture" id=5]

[node name="Love4Retro" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 272.0, 128.0 ],
"_edit_vertical_guides_": [ 240.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 272.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 120 )
texture = ExtResource( 5 )

[node name="TransitionIn" parent="." instance=ExtResource( 1 )]

[node name="TransitionOut" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
